--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -251,9 +251,9 @@
                     <div class="characteristics__models">
                         <a ref="POWERBOAT-470.html">
                         </a>                                          
-                        <h2>POWERBOAT 470</h2>
+                        <h2>PowerBoat 470 L + Suzuki DF 100 BTL + Лафет</h2>
                         <p class="responsive">КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ <br>
-                            <b> POWERBOAT 470</b></p>
+                            <b> POWERBOAT 470 L</b></p>
                             <div class="options"></div>
                             <dl>
                                 <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
