--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -153,7 +153,7 @@
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Килеватость на транце:</td>
-                                        <td class="numeral"></td>
+                                        <td class="numeral">14</td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Осадка</td>
@@ -251,9 +251,9 @@
                     <div class="characteristics__models">
                         <a ref="POWERBOAT-470.html">
                         </a>                                          
-                        <h2>PowerBoat 470 L + Suzuki DF 100 BTL + Лафет</h2>
-                        <p class="responsive">КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ <br>
-                            <b> POWERBOAT 470 L</b></p>
+                        <h2>Алюминиевая лодка PowerBoat 470 L</h2>
+                        <p class="responsive">+ Suzuki DF 100 BTL<br>+ Лафет<br> МАССА 215 КГ <br>
+                            <b> POWERBOAT 470</b></p>
                             <div class="options"></div>
                             <dl>
                                 <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
@@ -311,7 +311,7 @@
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Килеватость на транце:</td>
-                                        <td class="numeral"></td>
+                                        <td class="numeral">14</td>
                                     </tr>
                                     <tr class="specifications__a">
                                         <td>Осадка</td>
