--- a/powerboat/POWERBOAT-470.html
+++ b/powerboat/POWERBOAT-470.html
@@ -251,7 +251,7 @@
                     <div class="characteristics__models">
                         <a ref="POWERBOAT-470.html">
                         </a>                                          
-                        <h2>Алюминиевая лодка PowerBoat 470 L</h2>
+                        <h2>PowerBoat 470 L</h2>
                         <p class="responsive">+ Suzuki DF 100 BTL<br>+ Лафет<br> МАССА 215 КГ <br>
                             <b> POWERBOAT 470</b></p>
                             <div class="options"></div>
