--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренировки дома с персональным тренером</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="block.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
@@ -51,29 +51,44 @@
         </div>
     </header>
     <div id="content">
-        <div class="coach d-flex justify-content-around">
-            <!-- TODO after before pseudo elements -->
-            <div class="kdb">
-                <h1>Тренер на дом</h1>
-                Персональный тренер на дом - это относительно новая услуга на рынке фитнеса которая появилась для решения ряда препятствий на пути к здоровью, красоте и достижению спортивных результатов.
-                <img class="photo-home-train" src="img/boutique-gym.jpg" alt="персональный тренер Киев 0638587378"> Как правило, занятия в домашних условиях могут быть актуальны в связи с:<br>
-                <ul>
-                    <li>-нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li>
-                    <li>-в случае высокой занятости - экономия времени.</li>
-                    <li>-особенности образа жизни - невозможность или нежелание появляться на людях.</li>
-                    <li>-трудности с передвижением по городу - решение проблемы мобильности.</li>
-                    <li>-невозможность покинуть дом (декрет например).</li>
-                    <li>-наконец, наличие всего необходимого оборудования у Вас дома лишает смысла покупку абонемента в спортзал.</li>
-                </ul>
-                <p>
-                    При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</p>
-                <p> Воспользовавшись услугой тренер на дом Вы платите только за тренировки, а для занятий в фитнес-клубе Вам приходится так же приобретать абонемент. Существует так-же ряд преград для домашних тренировок.</p>
-                <p> В первую очередь это нехватка оборудования. Тут все зависит от цели занятий. Большинства поставленных целей уже можно достичь с оборудованием которое специально для этого случая возьмет наставник. К тому же, опытный инструктор сможет провести
-                    Вам эффективную тренировку упражнениями в которых дополнительный инвентарь не нужен. Если Вы хотите снизить лишний вес, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.
-                    Желаете снизить вес - услуга домашний тренер для похудения особенно актуальна, послольку для достижения такой цели важно не только заниматься, наставник сможет ознакомиться с Вашей средой обитания и тактично внести коррективы в Ваш
-                    образ жизни, что сделает процесс похудения более легким и быстрым, позволит сохранить достигнутые результаты надолго.
-                    <p>Стоимость тренировки на дому по Киеву 500грн/час/чел</p>
-                    <p> Пригород Киева 700грн/час/чел</p>
+        <div class="wrapper">
+            <div class="coach d-flex justify-content-around">
+                <!-- TODO after before pseudo elements -->
+                <div class="kdb">
+                    <h1>Тренер на дом</h1>
+                    <div class="lozung">Тренируйтесь дома или на природе со своим персональным тренером!</div><br>
+                    <div class="video-container">
+                        <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                    </div><br>                    
+                    <em>Можно заработать деньги, но нельзя купить здоровье!</em><br>
+                    <br>
+                    <b>Спорт - это необходимый в современном мире метод сохранения молодости!</b><br> 
+                    <br>
+                    Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
+                    чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую начать Вам заниматься спортом если Вы чувствуете вялость и апатию!<br>
+
+                    <div class="DumbbellsIcon">
+                        <h2>Тренер может прийти к Вам и провести полноценную тренировку у Вас дома или на улице</h2><br>
+                        Сейчас это очень актульно в связи с:
+
+                        <ul class="DumbbellsIcon">
+                            <li> изоляцией на период карантина</li>
+                            <li> пришла весна и стоит больше времени проводить на улице</li>
+                            <li> в случае высокой занятости - экономия времени</li>
+                            <li> трудности с передвижением по городу - решение проблемы мобильности</li>
+                            <li> особенности образа жизни - невозможность или нежелание появляться на людях</li>
+                            <li> в случае наличия необходимого оборудования у Вас дома нет смысла покупать абонемент в спортзал</li>
+                        </ul>
+                    </div>
+                    <p>
+                        При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</p><br>
+        
+                    <p> Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.
+                        <p>Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
+                        <!--
+                        <p> Пригород Киева 700грн/час/чел</p>
+                        -->
+                </div>
             </div>
         </div>
     </div>
