--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -83,10 +83,11 @@
                     <p>
                         При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</p><br>
         
-                    <p> Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.
+                                        <p> Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</p>
+
                         <p>Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
-                        <!--
-                        <p> Пригород Киева 700грн/час/чел</p>
+                        <p>Так же провожу групповые тренировки. Участие 150грн </p>
+
                         -->
                 </div>
             </div>
