--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -86,7 +86,7 @@
                                         <p> Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</p>
 
                         <p>Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
-                        <p>Так же провожу групповые тренировки. Участие 150грн </p>
+                        <p>Так же провожу групповые тренировки в парке "Наталка", на Оболони. Участие 150грн </p>
 
                        
                 </div>
