--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -55,8 +55,9 @@
         
                     <p> Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</p>
 
-                        <p>Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
-                                        <p>Цена действует по Киеву, районы Оболонь, Минский, Лукъяновка, КПИ</p>
+                        <p class="price">Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
+                        <p class="price">Цена действует по Киеву, районы Оболонь, Минский, Лукъяновка, КПИ</p>
+
 
                         <!--
                         <p> Пригород Киева 700грн/час/чел</p>
