--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренировки дома с персональным тренером</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="block.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="gray-block">
+       <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
             <h4>FITNES BLOG & STORE</h4>
         </div>
@@ -22,16 +22,18 @@
             <div class="coach d-flex justify-content-around">
                 <!-- TODO after before pseudo elements -->
                 <div class="kdb">
-                    <div class="coach-photo">
+                    <h1>Тренер на дом</h1>
+                    <div class="lozung"><h2>Тренируйтесь дома или на природе со своим персональным тренером!</h2></div><br>
+                    <div class="coach-block">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
-                        <h1>Тренер на дом</h1>
-                        <div class="lozung">Тренируйтесь дома или на природе со своим персональным тренером!</div><br>
-                        <em>Можно заработать деньги, но нельзя купить здоровье!</em><br>
-                        <br>
-                        <b>Спорт - это необходимый в современном мире метод сохранения молодости!</b><br> 
-                        <br>
-                        Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
-                        чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую начать Вам заниматься спортом если Вы чувствуете вялость и апатию!<br>
+                        <div class="motivation">
+                            <em>Можно заработать деньги, но нельзя купить здоровье!</em><br>
+                            <br>
+                            <b>Спорт - это необходимый в современном мире метод сохранения молодости!</b><br> 
+                            <br>
+                            Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
+                            чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую начать Вам заниматься спортом если Вы чувствуете вялость и апатию!<br>
+                        </div>
                     </div>
                     <div class="Coach-can">
                         <h2>Тренер может прийти к Вам и провести полноценную тренировку у Вас дома или на улице</h2><br>
@@ -57,8 +59,6 @@
 
                         <p class="price">Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский, Лукъяновка, КПИ</p>
-
-
                         <!--
                         <p> Пригород Киева 700грн/час/чел</p>
                         -->
