--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -54,13 +54,11 @@
                     <p>
                         При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</p><br>
         
-                    <p> Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</p>
+                                        <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</b></p>
 
-                        <p class="price">Стоимость тренировки на дому по Киеву 350грн/час/чел</p>
+                        <p class="price">Стоимость тренировки на дому 350грн/час/чел</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский, Лукъяновка, КПИ</p>
-                        <!--
-                        <p> Пригород Киева 700грн/час/чел</p>
-                        -->
+
                 </div>
             </div>
         </div>
