--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -14,7 +14,7 @@
     <header class="header">
        <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
-            <h4>FITNES BLOG & STORE</h4>
+            <h4>fitness trainer</h4>
         </div>
     </header>
     <div id="content">
