--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -17,7 +17,7 @@
             <h4>fitness trainer</h4>
         </div>
     </header>
-    <div id="content">
+        <div id="content">
         <div class="wrapper">
             <div class="coach d-flex justify-content-around">
                 <!-- TODO after before pseudo elements -->
@@ -36,8 +36,9 @@
                     </div>
                     <div class="Coach-can">
                         <h2>Тренер может прийти к Вам и провести полноценную тренировку у Вас дома или на улице</h2><br>
-                        Сейчас это очень актульно в связи с:
-
+                        <p>
+                            Сейчас это очень актульно в связи с:
+                        </p>
                         <ul class="DumbbellsIcon">
                             <li> изоляцией на период карантина</li>
                             <li> пришла весна и стоит больше времени проводить на улице</li>
@@ -46,14 +47,13 @@
                             <li> особенности образа жизни - невозможность или нежелание появляться на людях</li>
                             <li> в случае наличия необходимого оборудования у Вас дома нет смысла покупать абонемент в спортзал</li>
                         </ul>
+                        <p><b>
+                            При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</b></p><br>                
                     </div>
                     <div class="video-container">
                         <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
                     </div><br>                    
 
-                    <p>
-                        При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</p><br>
-        
                     <div class="story">
                         <h5>О себе:</h5>    
                         <p> Меня зовут Аркадий. Мой спортивный путь длится уже приблизительно 30 лет, из которых 10 я работаю тренером.
