--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -75,9 +75,9 @@
     <footer id="footer">
         <div class="black-block">
             <nav class="menu_footer">
-                <a href="index.html">Главная</a>
-                <a href="about_me.html">О себе</a>
-                <a href="contacts.html">Контакты</a>
+                <a ref="index.html">Главная</a>
+                <a ref="about_me.html">О себе</a>
+                <a ref="contacts.html">Контакты</a>
             </nav>
             <p class="number">+380638587378</p>
             <a href="tel:+380638587378">
