--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -42,9 +42,8 @@
                         <ul class="DumbbellsIcon">
                             <li> изоляцией на период карантина</li>
                             <li> пришла весна и стоит больше времени проводить на улице</li>
-                            <li> в случае высокой занятости - экономия времени</li>
+                            <li> экономия времени</li>
                             <li> трудности с передвижением по городу - решение проблемы мобильности</li>
-                            <li> особенности образа жизни - невозможность или нежелание появляться на людях</li>
                             <li> в случае наличия необходимого оборудования у Вас дома нет смысла покупать абонемент в спортзал</li>
                         </ul>
                         <p><b>
