--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -63,7 +63,8 @@
                     <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</b></p>
 
                         <p class="price">Стоимость тренировки на дому 300грн/час/чел</p>
-                        <p class="price">Цена действует по Киеву, районы Оболонь, Минский, Лукъяновка, КПИ</p>
+                        <p class="price">Стоимость тренировки в парке "Наталка" 200грн/час/чел</p>
+                        <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
                         <!--
                         <p> Пригород Киева 700грн/час/чел</p>
                         -->
