--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тренировки дома с персональным тренером</title>
+    <title>Тренировки с персональным тренером</title>
     <link href="style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
             <div class="coach d-flex justify-content-around">
                 <!-- TODO after before pseudo elements -->
                 <div class="kdb">
-                    <h1>Тренер на дом</h1>
+                    <h1>Персональный Тренер</h1>
                     <div class="lozung"><h2>Тренируйтесь дома или на природе со своим персональным тренером!</h2></div><br>
                     <div class="coach-block">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
