--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -22,7 +22,7 @@
             <div class="coach d-flex justify-content-around">
                 <!-- TODO after before pseudo elements -->
                 <div class="kdb">
-                    <h1>Персональный Тренер</h1>
+                    <h1>TRX тренировки с персональным тренером</h1>
                     <div class="lozung"><h2>Тренируйтесь дома или на природе со своим персональным тренером!</h2></div><br>
                     <div class="coach-block">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
