--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -23,7 +23,7 @@
                 <!-- TODO after before pseudo elements -->
                 <div class="kdb">
                     <h1>TRX тренировки с персональным тренером</h1>
-                    <div class="lozung"><h2>Тренируйтесь дома или на природе со своим персональным тренером!</h2></div><br>
+                    <div class="lozung"><h2>Тренируйтесь эффективно дома или на природе</h2></div><br>
                     <div class="coach-block">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
                         <div class="motivation">
