--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -63,8 +63,12 @@
                     <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</b></p>
 
                         <p class="price">Стоимость тренировки на дому 400грн/час/чел</p>
-                        <p class="price">Стоимость тренировки в парке "Наталка" 250грн/час/чел</p>
+                        <p class="price">Стоимость персональной тренировки в парке "Наталка" 300грн/час/чел</p>
+                        <p class="price">Стоимость тренировки в мини группе, в парке "Наталка" 150грн/час/чел</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
+               <br>
+                <h6>Где проводятся тренировки?</h6>
+                <p>Оболонь. Парк "Наталка"</p>
                         <!--
                         <p> Пригород Киева 700грн/час/чел</p>
                         -->
