--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -65,6 +65,7 @@
                         
                         <p class="price">Стоимость персональной тренировки в парке "Наталка" 300грн/час/чел</p>
                         <p class="price">Стоимость тренировки в мини группе, в парке "Наталка" 150грн/час/чел</p>
+                        <p class="price">Стоимость онлайн тренировки 400грн/час</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
                <br>
                 <h6>Где проводятся тренировки?</h6>
