--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -68,8 +68,12 @@
                         <p class="price">Стоимость онлайн тренировки 400грн/час</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
                <br>
-                <h4>Где проводятся тренировки?</h4>
-                <p>Оболонь. Парк "Наталка"</p>
+                <p><b>Где проводятся тренировки?</b></p>
+
+                               <p>Оболонь. Парк "Наталка"</p>
+                    <img class="place_for_training" src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                    <img class="place_for_training" src="img/photo2.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                    
                         <!--
                         <p> Пригород Киева 700грн/час/чел</p>
                         -->
