--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -68,7 +68,7 @@
                         <p class="price">Стоимость онлайн тренировки 400грн/час</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
                <br>
-                <p><b>Где проводятся тренировки?</b></p>
+                <h4>Где проводятся тренировки?</h4>
 
                                <p>Оболонь. Парк "Наталка"</p>
                     <img class="place_for_training" src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
