--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -71,8 +71,10 @@
                 <h4>Где проводятся тренировки?</h4>
 
                                <p>Оболонь. Парк "Наталка"</p>
-                    <img class="place_for_training" src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
-                    <img class="place_for_training" src="img/photo2.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                <div class="place_for_training">
+                    <img src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                    <img src="img/photo2.jpg" alt="Площадка для трх тренировок Киев 0638587378">
+                </div>
                     
                         <!--
                         <p> Пригород Киева 700грн/час/чел</p>
