--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -71,7 +71,7 @@
                 <h4>Где проводятся тренировки?</h4>
 
                                <p>Оболонь. Парк "Наталка"</p>
-                <div class="place_for_training">
+                <div class="place-for-training">
                     <img src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
                     <img src="img/photo2.jpg" alt="Площадка для трх тренировок Киев 0638587378">
                 </div>
