--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -35,6 +35,24 @@
                         </div>
                     </div>
                     <div class="Coach-can">
+                        <h2>Что дают тренировки? Зачем вообще тренироваться?</h2><br>
+                        <ul class="DumbbellsIcon">
+                            <li> Молодеет кожа</li>
+                            <li> Появится гибкость</li>
+                            <li> Улучшается настроение. Появляется легкость и решительность</li>
+                            <li> Уйдет лишний жир. Вы увидите в зеркале подтянутое, стройное, спортивное телосложение</li>
+                            <li> Укрепятся мышцы. Появится сила и подвижность</li>
+                        </ul>
+                        <p>
+                            Вы заставляете свое тело работать на повышенных режимах. Тренируете сердце. Ускоряется кровообращение. Улучшается снабжение клеток 
+                            всех тканей питательными веществами - макро (БЖУ) и микроэлементами (витамины, минералы) и кислородом. 
+                            Улучшается удаление продуктов распада и углекислого газа. Эти процессы касаются всех органов. Поэтому, в результате тренировок 
+                            улучшается общее состояние здоровья. Я называю фитнес "гигиеной тела". В этом нет героизма, но Ваши результаты увидят все.<br>
+                            Что Вы получите?:
+                        </p>
+                    </div>
+
+                    <div class="Coach-can">
                         <h2>Тренер может прийти к Вам и провести полноценную тренировку у Вас дома или на улице</h2><br>
                         <p>
                             Сейчас это очень актульно в связи с:
