--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -46,8 +46,9 @@
                         <p>
                             Вы заставляете свое тело работать на повышенных режимах. Тренируете сердце. Ускоряется кровообращение. Улучшается снабжение клеток 
                             всех тканей питательными веществами - макро (БЖУ) и микроэлементами (витамины, минералы) и кислородом. 
-                            Улучшается удаление продуктов распада и углекислого газа. Эти процессы касаются всех органов. Поэтому, в результате тренировок 
-                            улучшается общее состояние здоровья. Я называю фитнес "гигиеной тела". В этом нет героизма, но Ваши результаты увидят все.<br>
+                            Улучшается удаление продуктов распада и углекислого газа. Эти процессы касаются всех органов, поэтому, в результате тренировок 
+                            улучшается общее состояние здоровья.<br>
+                            Я называю фитнес "гигиеной тела". В этом нет героизма, но Ваши результаты увидят все.<br>
                             Что Вы получите?:
                         </p>
                     </div>
