--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -48,8 +48,7 @@
                             всех тканей питательными веществами - макро (БЖУ) и микроэлементами (витамины, минералы) и кислородом. 
                             Улучшается удаление продуктов распада и углекислого газа. Эти процессы касаются всех органов, поэтому, в результате тренировок 
                             улучшается общее состояние здоровья.<br>
-                            Я называю фитнес "гигиеной тела". В этом нет героизма, но Ваши результаты увидят все.<br>
-                            Что Вы получите?:
+                            Я называю фитнес "гигиеной тела". В этом нет героизма, но Ваши результаты увидят все!<br>
                         </p>
                     </div>
 
