--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -76,9 +76,10 @@
                         <p class="price">Стоимость онлайн тренировки 400грн/час</p>
                         <p class="price">Цена действует по Киеву, районы Оболонь, Минский</p>
                <br>
-                <h4>Где проводятся тренировки?</h4>
+                <h3>Групповые тренировки проводятся здесь:</h3>
 
-                               <p>Оболонь. Парк "Наталка"</p>
+                               <p>Оболонь. Парк "Наталка". Итти по аллее в сторону Днепра от первой клумбы, 
+                                   между рестораном "Желтые воды" и клиникой "Медиком", прямо, мимо детской площадки, в сторону фубольного поля.</p>
                 
                     <img class="place-for-training" src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
                     <img class="place-for-training" src="img/photo2.jpg" alt="Площадка для трх тренировок Киев 0638587378">
