--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -25,13 +25,13 @@
                     <h1>TRX групповые и персональные тренировки</h1>
                     <div class="lozung"><h2>Тренируйтесь эффективно на природе или дома с персональным тренером</h2></div><br>
                     <div class="coach-block">
-                        <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
+                        <img class="photo-coach" src="img/тродос.png" alt="персональный тренер Киев 0638587378">
                         <div class="motivation">
                             <br>
                             <b>Спорт - это необходимый в современном мире метод сохранения молодости!</b><br> 
                             <br>
                             <p> Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
-                            чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую начать Вам заниматься спортом если Вы чувствуете вялость и апатию!</p><br>
+                            чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую Вам начать заниматься спортом если Вы чувствуете вялость и апатию!</p><br>
                         </div>
                     </div>
                     <div class="Coach-can">
@@ -62,7 +62,8 @@
                     </div><br>                    
 
                     <div class="story">
-                        <h5>О себе:</h5>    
+                        <h5>О себе:</h5> 
+                        <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">   
                         <p> Меня зовут Аркадий. Мой спортивный путь длится уже приблизительно 30 лет, из которых 10 я работаю тренером.
                                 В подростковом возрасте я получил компрессионный перелом позвоночника. 
                                 Это событие положило начало пути реабилитации, в результате которого я восстановился, нашел профессию - тренер. И новое увлечение - силовой тренинг.
