--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -28,7 +28,7 @@
                         <img class="photo-coach" src="img/тродос.png" alt="персональный тренер Киев 0638587378">
                         <div class="motivation">
                             <br>
-                            <b>Спорт - это необходимый в современном мире метод сохранения молодости!</b><br> 
+                            <p><b>Спорт - это необходимый в современном мире метод сохранения молодости!</b></p><br> 
                             <br>
                             <p> Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
                             чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую Вам начать заниматься спортом если Вы чувствуете вялость и апатию!</p><br>
