--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -28,7 +28,7 @@
                         <img class="photo-coach" src="img/тродос.png" alt="персональный тренер Киев 0638587378">
                         <div class="motivation">
                             <br>
-                            <p><b>Спорт - это необходимый в современном мире метод сохранения молодости!</b></p><br> 
+                            <b>Спорт - это необходимый в современном мире метод сохранения молодости!</b><br> 
                             <br>
                             <p> Главное что дает спорт - это наше внутреннее самочувствие. Спортивный человек даже в возрасте 
                             чувствует себя молодым и энергичным. Поэтому, в первую очередь я рекомендую Вам начать заниматься спортом если Вы чувствуете вялость и апатию!</p><br>
@@ -62,7 +62,36 @@
                     </div><br>                    
 
                     <div class="story">
-                        <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">   
+                        <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
+
+
+
+
+                        <div class="Coach-can">
+                            <h2>Почему TRX?</h2><br>
+                            <ul class="DumbbellsIcon">
+                                <li>    Отсутствие нагрузки на позвоночник и суставы, разгрузка позвоночника</li>
+                                <li>    Работа с весом собственного тела</li>
+                                <li>    Подходит для всех уровней тренеированности, мгновенная регулировка величины нагрузки</li>
+                                <li>    Отсутствие зависимости от зала. Тренируйся где захочешь</li>
+                                <li>    Подходит для реабилитации ОДА</li>
+                                <li>    Полезно для развития подростков</li>
+                                <li>    Быстрое сжигание калорий</li>
+                            </ul>
+                            <p>
+                                Тренируясь с петлями TRX Вы поднимаете процент от веса собственного тела. Усилие, которое 
+                                приходится преодолевать всегда направлено вверх, навстречу гравитации, поэтому позвоночник и суставы разгружаются.
+                                Такие нагрузки полезны для подростков, поскольку укрепляют мышцы, развивают тело и не препятствуют росту. 
+                                Хорошо подходят для разработки и укрепления суставов при реабилитации после травм<br>
+                                Только базовые - многосуставные, энергоемкие движения, сопутствующие сжиганию большого количеству калорий<br>
+                            </p>
+                        </div>
+    
+
+
+
+
+
                         <h5>О себе:</h5> 
                         <p> Меня зовут Аркадий. Мой спортивный путь длится уже приблизительно 30 лет, из которых 10 я работаю тренером.
                                 В подростковом возрасте я получил компрессионный перелом позвоночника. 
