--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -81,7 +81,7 @@
                         </div>                      
                     <div class="story">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
-                        <h5>О себе:</h5> 
+                        <h5>О тренере:</h5> 
                         <p> Меня зовут Аркадий. Мой спортивный путь длится уже приблизительно 30 лет, из которых 10 я работаю тренером.
                                 В подростковом возрасте я получил компрессионный перелом позвоночника. 
                                 Это событие положило начало пути реабилитации, в результате которого я восстановился, нашел профессию - тренер. И новое увлечение - силовой тренинг.
