--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -74,8 +74,8 @@
                             <p>
                                 Тренируясь с петлями TRX Вы поднимаете процент от веса собственного тела. Усилие, которое 
                                 приходится преодолевать всегда направлено вверх, навстречу гравитации, поэтому позвоночник и суставы разгружаются.
-                                Такие нагрузки полезны для подростков, поскольку укрепляют мышцы, развивают тело и не препятствуют росту. 
-                                Хорошо подходят для разработки и укрепления суставов при реабилитации после травм<br>
+                                Такие нагрузки хорошо подходят для разработки и укрепления суставов при реабилитации после травм, а так же полезны для подростков, поскольку укрепляют мышцы, развивают тело и не препятствуют росту. 
+                                <br>
                                 Только базовые - многосуставные, энергоемкие движения, сопутствующие сжиганию большого количеству калорий<br>
                             </p>
                         </div>                      
