--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -76,7 +76,7 @@
                                 приходится преодолевать всегда направлено вверх, навстречу гравитации, поэтому позвоночник и суставы разгружаются.
                                 Такие нагрузки полезны всем людям. А так же хорошо подходят для разработки и укрепления суставов при реабилитации после травм, а так же полезны для подростков, поскольку укрепляют мышцы, развивают тело и не препятствуют росту. 
                                 <br>
-                                Движения в TRX только базовые - многосуставные, энергоемкие, сопутствующие сжиганию большого количеству калорий<br>
+                                Движения в TRX только базовые - многосуставные, энергоемкие, сопутствующие сжиганию большого количества калорий<br>
                             </p>
                         </div>                      
                     <div class="story">
