--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -87,7 +87,7 @@
                                 Это событие положило начало пути реабилитации, в результате которого я восстановился, нашел профессию - тренер. И новое увлечение - силовой тренинг.
                             </p>
                     </div>
-                    <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях.</b></p>
+                    <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы натренировках на улице или в домашних условиях.</b></p>
 
                <br>
                         <p class="price">Стоимость персональной тренировки в парке "Наталка" 300грн/час/чел</p>
