--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -81,7 +81,7 @@
                         </div>                      
                     <div class="story">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
-                        <h5>О тренере:</h5> 
+                        <h3>О тренере:</h3> 
                         <p> Меня зовут Аркадий. Мой спортивный путь длится уже приблизительно 30 лет, из которых 10 я работаю тренером.
                                 В подростковом возрасте я получил компрессионный перелом позвоночника. 
                                 Это событие положило начало пути реабилитации, в результате которого я восстановился, нашел профессию - тренер. И новое увлечение - силовой тренинг.
@@ -90,6 +90,8 @@
                     <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы натренировках на улице или в домашних условиях.</b></p>
 
                <br>
+               <h4>Расположение и стоимость:</h4><br>
+
                         <p class="price">Стоимость персональной тренировки в парке "Наталка" 300грн/час/чел</p>
                         <p class="price">Стоимость тренировки в мини группе, в парке "Наталка" 150грн/час/чел</p>
                         <p class="price">Стоимость онлайн тренировки 400грн/час</p>
