--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -90,8 +90,7 @@
                     <p><b>Если Вы хотите снизить лишний вес, откорректировать фигуру, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы натренировках на улице или в домашних условиях.</b></p>
 
                <br>
-               <b>Расположение и стоимость:</b><br>
-
+               <h3>Расположение и стоимость:</h3><br>
                         <p class="price">Стоимость персональной тренировки в парке "Наталка" 300грн/час/чел</p>
                         <p class="price">Стоимость тренировки в мини группе, в парке "Наталка" 150грн/час/чел</p>
                         <p class="price">Стоимость онлайн тренировки 400грн/час</p>
