--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -59,6 +59,7 @@
                     </div>
                     <div class="video-container">
                         <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                        <embed width="1349" height="480" src="https://youtu.be/-hlaWOW4PtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
                     </div><br>             
                         <div class="Coach-can">
                             <h2>Почему TRX?</h2><br>
