--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -58,12 +58,7 @@
                             При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</b></p><br>                
                     </div>
                     <div class="video-container">
-                        <div>
                             <embed width="1349" height="480" src="https://www.youtube.com/embed/-hlaWOW4PtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                        </div>
-                        <div>
-                            <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                        </div>
                     </div><br>                      
                         <div class="Coach-can">
                             <h2>Почему TRX?</h2><br>
@@ -83,7 +78,10 @@
                                 <br>
                                 Движения в TRX только базовые - многосуставные, энергоемкие, сопутствующие сжиганию большого количества калорий<br>
                             </p>
-                        </div>                      
+                        </div>
+                        <div class="video-container">
+                            <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                        </div><br>                                        
                     <div class="story">
                         <img class="photo-coach" src="img/4m.png" alt="персональный тренер Киев 0638587378">
                         <h3>О тренере:</h3> 
