--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -70,6 +70,7 @@
                                 <li>    Подходит для реабилитации ОДА</li>
                                 <li>    Полезно для развития подростков</li>
                                 <li>    Быстрое сжигание калорий</li>
+                                <li>    Позволяет тренироваться онлайн и не прерывать тренировочный график из-за поездок</li>                              
                             </ul>
                             <div class="video-container">
                                 <embed width="1349" height="480" src="https://www.youtube.com/embed/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
