--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -57,9 +57,11 @@
                         <p><b>
                             При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое удобное для Вас время!</b></p><br>                
                     </div>
-                    <div class="video-container">
-                            <embed width="1349" height="480" src="https://www.youtube.com/embed/-hlaWOW4PtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                    </div><br>                      
+                        <div class="Coach-can">
+                            <div class="video-container">
+                                    <embed width="1349" height="480" src="https://www.youtube.com/embed/-hlaWOW4PtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                            </div><br>
+                        </div>                      
                         <div class="Coach-can">
                             <h2>Почему TRX?</h2><br>
                             <ul class="DumbbellsIcon">
