--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -101,7 +101,7 @@
 
                                 <p>Оболонь. Парк "Наталка". Итти по аллее в сторону Днепра от первой клумбы, 
                                    между рестораном "Желтые воды" и клиникой "Медиком", прямо, мимо детской площадки, в сторону фубольного поля.</p>
-                                <p>Регулярно, по вторникам и четвергам в 7:30</p><br>                
+                                <p>Регулярно по субботам в 8:30</p><br>                
                                 <h3>Внимание! Необходима предварительная регитрация на тренировки!</h3>
 
                                    <img class="place-for-training" src="img/photo1.jpg" alt="Площадка для трх тренировок Киев 0638587378">
