--- a/sport-blog/pt.home.html
+++ b/sport-blog/pt.home.html
@@ -53,8 +53,8 @@
                     </div>
                         <div class="Coach-can">
                             <div class="video-container">
-                                    <embed width="1349" height="480" src="https://youtu.be/E_b5wolxXas" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                                    </div><br>
+                                <embed width="1349" height="480" src="https://www.youtube.com/embed/-hlaWOW4PtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                            </div><br>
                         </div>                      
                         <div class="Coach-can">
                             <h2>Почему TRX?</h2><br>
