--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
                     </a>
                 </div>
             </div>
+            <div class="case">
+                <div class="box_example">
+                    <a href="fitnes-shop/fitnes-shop.html">                    
+                        <img class="example" src="img/online store.jpg" alt="Разработка сайтов Киев +380638587378">
+                        <p class="explanation">Интернет магазин спортивных товаров</p><br>
+                        <p class="box_example__comment">Адаптивен под все устройства.<br> 
+                            (Сделан с использованием технологии CSS Grid, и библиотеки стилей "bootstrap")</p>       
+                    </a>
+                </div>
+            </div> 
         </div>
         <footer class="footer">
             <div class="container">
